--- a/entrega/angular.json
+++ b/entrega/angular.json
@@ -24,13 +24,21 @@
                         ],
                         "styles": [
                             "src/styles.css",
-                            "node_modules/material-design-icons/iconfont/material-icons.css"
+                            "node_modules/material-design-icons/iconfont/material-icons.css",
+                            "node_modules/material-design-iconic-font/dist/css/material-design-iconic-font.css",
+                            "node_modules/roboto-fontface/css/roboto/roboto-fontface.css",
+                            "node_modules/roboto-fontface/css/roboto-condensed/roboto-condensed-fontface.css",
+                            "node_modules/roboto-fontface/css/roboto-slab/roboto-slab-fontface.css"
                         ],
                         "scripts": [
-//                            "src/assets/js/material-components-web.js",
-//                            "src/assets/js/jquery.min.js",
-//                            "src/assets/js/misc.js",
-//                            "src/assets/js/material.js"
+                            "src/assets/js/jquery.min.js",
+                            "src/assets/js/bootstrap.min.js",
+                            "src/assets/js/jquery-nice-scroll.js",
+                            "src/assets/js/waves.min.js",
+                            "src/assets/js/bootstrap-growl.min.js",
+                            "src/assets/js/sweet-alert.min.js",
+                            "src/assets/js/functions.js",
+                            "src/assets/js/demo.js"
                         ]
                     },
                     "configurations": {
