--- a/entrega/package.json
+++ b/entrega/package.json
@@ -23,9 +23,11 @@
         "@angular/platform-browser-dynamic": "^7.0.2",
         "@angular/router": "^7.0.2",
         "core-js": "^2.5.4",
+        "material-design-iconic-font": "^2.2.0",
         "material-design-icons": "^3.0.1",
         "ngx-mat-select-search": "^1.4.2",
         "node-sass": "^4.10.0",
+        "roboto-fontface": "^0.10.0",
         "rxjs": "~6.3.3",
         "zone.js": "~0.8.26"
     },
