--- a/entrega/package.json
+++ b/entrega/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng --port=4300 --open",
-    "start": "ng serve",
+    "start": "ng serve --port=4400 --open",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -11,17 +11,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.1.0",
-    "@angular/cdk": "^7.1.0",
-    "@angular/common": "^7.1.0",
-    "@angular/compiler": "^7.1.0",
-    "@angular/core": "^7.1.0",
-    "@angular/forms": "^7.1.0",
-    "@angular/http": "^7.1.0",
+    "@angular/animations": "^7.1.1",
+    "@angular/cdk": "^7.1.4",
+    "@angular/common": "^7.1.4",
+    "@angular/compiler": "^7.1.4",
+    "@angular/core": "^7.1.4",
+    "@angular/forms": "^7.1.4",
+    "@angular/http": "^7.1.4",
     "@angular/material": "^7.1.0",
-    "@angular/platform-browser": "^7.1.0",
-    "@angular/platform-browser-dynamic": "^7.1.0",
-    "@angular/router": "^7.1.0",
+    "@angular/platform-browser": "^7.1.4",
+    "@angular/platform-browser-dynamic": "^7.1.4",
+    "@angular/router": "^7.1.4",
     "core-js": "^2.5.4",
     "material-design-iconic-font": "^2.2.0",
     "material-design-icons": "^3.0.1",
@@ -32,10 +32,10 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.6",
-    "@angular/cli": "~7.0.6",
-    "@angular/compiler-cli": "^7.1.0",
-    "@angular/language-service": "^7.1.0",
+    "@angular-devkit/build-angular": "~0.11.4",
+    "@angular/cli": "^7.1.4",
+    "@angular/compiler-cli": "^7.1.4",
+    "@angular/language-service": "^7.1.4",
     "@types/jasmine": "~3.3.0",
     "@types/jasminewd2": "~2.0.6",
     "@types/node": "~10.12.10",
@@ -49,7 +49,7 @@
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
+    "tslint": "~5.12.0",
     "typescript": "~3.1.6"
   }
 }
