--- a/entrega/package.json
+++ b/entrega/package.json
@@ -11,46 +11,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.0",
-    "@angular/cdk": "^7.2.1",
-    "@angular/common": "^7.2.0",
-    "@angular/compiler": "^7.2.0",
-    "@angular/core": "^7.2.0",
-    "@angular/forms": "^7.2.0",
-    "@angular/http": "^7.2.0",
-    "@angular/material": "^7.2.1",
-    "@angular/platform-browser": "^7.2.0",
-    "@angular/platform-browser-dynamic": "^7.2.0",
-    "@angular/router": "^7.2.0",
-    "angular-modal-service": "^0.15.1",
-    "core-js": "^2.6.2",
+    "@angular/animations": "^7.2.15",
+    "@angular/cdk": "^7.3.7",
+    "@angular/common": "^7.2.15",
+    "@angular/compiler": "^7.2.15",
+    "@angular/core": "^7.2.15",
+    "@angular/forms": "^7.2.15",
+    "@angular/http": "^7.2.15",
+    "@angular/material": "^7.3.7",
+    "@angular/platform-browser": "^7.2.15",
+    "@angular/platform-browser-dynamic": "^7.2.15",
+    "@angular/router": "^7.2.15",
+    "angular-modal-service": "^0.15.2",
+    "core-js": "^3.0.1",
     "material-design-iconic-font": "^2.2.0",
     "material-design-icons": "^3.0.1",
-    "ngx-mat-select-search": "^1.5.1",
-    "node-sass": "^4.10.0",
+    "ngx-mat-select-search": "^1.7.3",
+    "node-sass": "^4.12.0",
+    "npm-check-updates": "^3.1.9",
     "roboto-fontface": "^0.10.0",
-    "rxjs": "~6.3.3",
-    "zone.js": "~0.8.27"
+    "rxjs": "~6.5.2",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.12.1",
-    "@angular/cli": "^7.2.1",
-    "@angular/compiler-cli": "^7.2.0",
-    "@angular/language-service": "^7.2.0",
-    "@types/jasmine": "~3.3.5",
+    "@angular-devkit/build-angular": "^0.13.9",
+    "@angular/cli": "^7.3.9",
+    "@angular/compiler-cli": "^7.2.15",
+    "@angular/language-service": "^7.2.15",
+    "@types/jasmine": "~3.3.12",
     "@types/jasminewd2": "~2.0.6",
-    "@types/node": "~10.12.18",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~3.3.0",
+    "@types/node": "~12.0.0",
+    "codelyzer": "~5.0.1",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.4",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "~2.0.5",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~5.4.2",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.12.1",
-    "typescript": "~3.2.2"
+    "ts-node": "~8.1.0",
+    "tslint": "~5.16.0",
+    "typescript": "~3.2.4"
   }
 }
