--- a/entrega/package.json
+++ b/entrega/package.json
@@ -21,35 +21,34 @@
     "@angular/platform-browser": "^12.1.4",
     "@angular/platform-browser-dynamic": "^12.1.4",
     "@angular/router": "^12.1.4",
-    "angular-modal-service": "^0.15.2",
-    "core-js": "^3.0.1",
+    "angular-modal-service": "^0.15.6",
+    "core-js": "^3.16.0",
     "material-design-iconic-font": "^2.2.0",
     "material-design-icons": "^3.0.1",
     "ngx-mat-select-search": "^3.3.0",
-    "npm-check-updates": "^3.1.9",
     "roboto-fontface": "^0.10.0",
-    "rxjs": "~6.6.7",
-    "zone.js": "~0.9.1"
+    "rxjs": "^6.5.3",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.9",
-    "@angular/cli": "^7.3.9",
+    "@angular-devkit/build-angular": "^12.1.4",
+    "@angular/cli": "^12.1.4",
     "@angular/compiler-cli": "^12.1.4",
     "@angular/language-service": "^12.1.4",
-    "@types/jasmine": "~3.3.12",
-    "@types/jasminewd2": "~2.0.6",
-    "@types/node": "~12.0.0",
-    "codelyzer": "~5.0.1",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.5",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~5.4.2",
-    "ts-node": "~8.1.0",
-    "tslint": "~5.16.0",
-    "typescript": "~3.2.4"
+    "@types/jasmine": "~3.8.2",
+    "@types/jasminewd2": "~2.0.10",
+    "@types/node": "~16.4.11",
+    "codelyzer": "~6.0.2",
+    "jasmine-core": "~3.8.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "^6.3.4",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "^1.7.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~10.1.0",
+    "tslint": "~5.20.1",
+    "typescript": "~4.3.5"
   }
 }
